--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.png" />
+		<link rel="apple-touch-icon" href="/brain192.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <title>Habits tracker</title>
+		<meta name="description" content="Habits tracker app">
+		<meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <div id="root"></div>
